--- a/app/src/main/res/layout/fragment_create_exam.xml
+++ b/app/src/main/res/layout/fragment_create_exam.xml
@@ -19,6 +19,7 @@
             android:fontFamily="casual"
             android:text="@string/add_exam"
             android:textAlignment="center"
+            android:textColor="@android:color/black"
             android:textSize="30sp"
             android:textStyle="bold" />
 
